--- a/Radio-Teate-On-Air-Info.plist
+++ b/Radio-Teate-On-Air-Info.plist
@@ -8,6 +8,8 @@ ITSAppUsesNonExemptEncryption</key>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>audio</string>
+		<string>fetch</string>
+		<string>processing</string>
 	</array>
 </dict>
 </plist>
