--- a/Radio-Teate-On-Air-Info.plist
+++ b/Radio-Teate-On-Air-Info.plist
@@ -1,13 +1,18 @@
+
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>Multiple commands produce '/Users/lrnz/Library/Developer/Xcode/DerivedData/Radio_Teate_On_Air-brdezjorbiuuwxdwlifothoktadh/Build/Intermediates.noindex/ArchiveIntermediates/Radio Teate On Air/InstallationBuildProductsLocation/Applications/Radio Teate On Air.app/Info.plist'
-ITSAppUsesNonExemptEncryption</key>
-	<false/>
-	<key>UIBackgroundModes</key>
-	<array>
-		<string>audio</string>
-	</array>
+    <key>ITSAppUsesNonExemptEncryption</key>
+    <false/>
+    <key>UIBackgroundModes</key>
+    <array>
+        <string>audio</string>
+    </array>
+    <key>BGTaskSchedulerPermittedIdentifiers</key>
+    <array>
+        <string>com.ergaomnes.teateonairapp.refresh</string>
+        <string>com.ergaomnes.teateonairapp.processing</string>
+    </array>
 </dict>
 </plist>
